style.css
/* ... */
#venue_container #venue_date_wrapper {
    display: inline-block;
    width: 33%;
}

#venue_container #venue_date {
    font-size: 42px;
}

#venue_container #venue_year {
    font-size: 14px;
}

#venue_container #venue_time_wrapper {
    display: inline-block;
    width: 32%;
}

#venue_container #venue_time {
    font-size: 42px;
}

#venue_container #venue_tod {
    font-size: 14px;
}


#venue_container #venue_address_wrapper {
    display: inline-block;
    width: 34%;
}

#venue_container #venue_address_line1 {
    font-size: 23px;
}

#venue_container #venue_address_line2 {
    font-size: 14px;
}

#venue_container #venue_map iframe {
    width: 96%;
    height: 85%;
    margin: auto;
    box-shadow: 4px 4px 10px #adadad;
}

#venue_container #close_button {
    position: absolute;
    top: 35px;
    right: 35px;
    font-size: 30px;
    color: #4e4e4e;
    cursor: pointer;
}


#venue_container_small {
    position: absolute;
    bottom: 0px;
    
    background: linear-gradient(to right, #eff0bb, #d5d3dd);
    height: 80%;
    width: 90%;
    left: 5%;
}

#venue_container_small #venue_details_wrapper_row1 {
    text-align: center;
    margin: 30px auto 0px auto;
}

#venue_container_small #venue_date_wrapper {
    width: 50%;
}

#venue_container_small #venue_date {
    font-size: 30px;
}

#venue_container_small #venue_year {
    font-size: 11px;
}

#venue_container_small #venue_time_wrapper {
    width: 50%;
}

#venue_container_small #venue_time {
    font-size: 30px;
}

#venue_container_small #venue_tod {
    font-size: 11px;
}

#venue_container_small #venue_details_wrapper_row2 {
    text-align: center;
    margin: 20px auto 20px auto;
}

#venue_container_small #venue_address_line1 {
    font-size: 20px;
}

#venue_container_small #venue_address_line2 {
    font-size: 11px;
}

#venue_container_small #venue_map {
    padding: 0px;
}

#venue_container_small #venue_map iframe {
    height: 95%;
    box-shadow: 4px 4px 10px #adadad;
}

#venue_container_small #close_button {
    position: absolute;
    top: 6px;
    right: 15px;
    font-size: 26px;
    color: #4e4e4e;
    cursor: pointer;
}

